--- a/Views/Productos/EditarProducto.cshtml
+++ b/Views/Productos/EditarProducto.cshtml
@@ -1,16 +1,16 @@
 @using TP6.Models
-@model Productos;
+@model Productos
 
-<form asp-asp-controller="Productos" asp-action="EditarProducto">
-    <input asp-for="@Model.idProducto" type="hidden" class="form-control"/>
+<form asp-controller="Productos" asp-action="EditarProducto">
+    <input asp-for="idProducto" type="hidden" class="form-control" value="@Model.idProducto" />
     <div class="form-group">
-        <label asp-for="@Model.Descripcion" class="control-label"></label>
-        <input asp-for="@Model.Descripcion" class="form-control"/>
+        <label asp-for="Descripcion" class="control-label"></label>
+        <input asp-for="Descripcion" class="form-control" value="@Model.Descripcion" />
         <span asp-validation-for="Descripcion" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="@Model.Precio" class="control-label"></label>
-        <input asp-for="@Model.Precio" class="form-control"/>
+        <label asp-for="Precio" class="control-label"></label>
+        <input asp-for="Precio" class="form-control" value="@Model.Precio" />
         <span asp-validation-for="Precio" class="text-danger"></span>
     </div>
 
