--- a/Views/Productos/Index.cshtml
+++ b/Views/Productos/Index.cshtml
@@ -2,7 +2,7 @@
 @model List<Productos>;
 
 @{
-    ViewData["Title"] = "Todos los productos";
+    ViewData["Title"] = "Todos los Productos";
 }
 
 <h1>@ViewData["Title"]</h1>
