--- a/Views/Productos/CrearProducto.cshtml
+++ b/Views/Productos/CrearProducto.cshtml
@@ -1,6 +1,12 @@
 @using TP6.Models
 @model Productos;
 
+@{
+    ViewData["Title"] = "Crear Producto";
+}
+
+<h1>@ViewData["Title"]</h1>
+
 <form asp-asp-controller="Productos" asp-action="CrearProducto">
     <div class="form-group">
         <label asp-for="@Model.Descripcion" class="control-label"></label>
@@ -8,12 +14,12 @@
         <span asp-validation-for="Descripcion" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="form-group mt-2">
         <label asp-for="@Model.Precio" class="control-label"></label>
         <input asp-for="@Model.Precio" class="form-control"/>
         <span asp-validation-for="Precio" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Crear</button>
-    <a href="@Url.Action("Index")" class="btn btn-secondary">Cancelar</a>
+    <button type="submit" class="btn btn-primary mt-3">Crear</button>
+    <a href="@Url.Action("Index")" class="btn btn-secondary mt-3">Cancelar</a>
 </form>
