agregamos y modificamos las vistas

--- a/Views/Presupuestos/CrearPresupuesto.cshtml
+++ b/Views/Presupuestos/CrearPresupuesto.cshtml
@@ -1,5 +1,5 @@
-@using TP6.Models
-@model Presupuestos;
+@using TP7.ViewModels
+@model CrearPresupuestoViewModel;
 
 @{
     ViewData["Title"] = "Crear Presupuesto";
