--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark hover-underline" asp-area="" asp-controller="Presupuestos" asp-action="CrearPresupuesto">Crear Presupuesto</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark hover-underline" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
